added swtbot-tests. new test-plugin for tycho-build

--- a/releng/emfstore-parent/pom.xml
+++ b/releng/emfstore-parent/pom.xml
@@ -175,6 +175,8 @@
 
     <!-- Testing -->
     <module>../../tests/org.eclipse.emf.emfstore.client.test</module>
+	<module>../../tests/org.eclipse.emf.emfstore.client.test.ui</module>
+	<module>../../tests/org.eclipse.emf.emfstore.client.test.alltests</module>
     
   </modules>
 <!-- 
