--- a/tests/org.eclipse.emf.emfstore.client.test.ui/pom.xml
+++ b/tests/org.eclipse.emf.emfstore.client.test.ui/pom.xml
@@ -11,8 +11,8 @@
   </parent>
 
   <groupId>org.eclipse.emf.emfstore</groupId>
-  <artifactId>org.eclipse.emf.emfstore.client.test</artifactId>
+  <artifactId>org.eclipse.emf.emfstore.client.test.ui</artifactId>
   <version>1.0.0-SNAPSHOT</version>
   <packaging>eclipse-plugin</packaging>
-
+  
 </project>
