--- a/releng/emfstore-parent/pom.xml
+++ b/releng/emfstore-parent/pom.xml
@@ -162,14 +162,14 @@
     <module>../../features/org.eclipse.emf.emfstore.modelmutator.feature</module>
         
     <!-- Fuzzy -->    
-    <module>../org.eclipse.emf.emfstore.fuzzy.feature</module>
-    <module>../org.eclipse.emf.emfstore.fuzzy.test.feature</module>
-	<module>../../org.eclipse.emf.emfstore.other/org.eclipse.emf.emfstore.fuzzy</module>
-	<module>../../org.eclipse.emf.emfstore.other/org.eclipse.emf.emfstore.fuzzy.emf</module>
-	<module>../../org.eclipse.emf.emfstore.other/org.eclipse.emf.emfstore.fuzzy.emf.edit</module>
-	<module>../../org.eclipse.emf.emfstore.other/org.eclipse.emf.emfstore.fuzzy.emf.editor</module>
-	<module>../../org.eclipse.emf.emfstore.other/org.eclipse.emf.emfstore.fuzzy.emf.example</module>
-	<module>../../org.eclipse.emf.emfstore.other/org.eclipse.emf.emfstore.fuzzy.emf.test</module>
+    <module>../../features/org.eclipse.emf.emfstore.fuzzy.feature</module>
+    <module>../../features/org.eclipse.emf.emfstore.fuzzy.test.feature</module>
+	<module>../../bundles/org.eclipse.emf.emfstore.fuzzy</module>
+	<module>../../bundles/org.eclipse.emf.emfstore.fuzzy.emf</module>
+	<module>../../bundles/org.eclipse.emf.emfstore.fuzzy.emf.edit</module>
+	<module>../../bundles/org.eclipse.emf.emfstore.fuzzy.emf.editor</module>
+	<module>../../bundles/org.eclipse.emf.emfstore.fuzzy.emf.example</module>
+	<module>../../tests/org.eclipse.emf.emfstore.fuzzy.emf.test</module>
 	
     <!-- Testing -->
     <module>../../tests/org.eclipse.emf.emfstore.client.test</module>
