--- a/bundles/org.eclipse.emf.emfstore.fuzzy.emf/pom.xml
+++ b/bundles/org.eclipse.emf.emfstore.fuzzy.emf/pom.xml
@@ -29,6 +29,7 @@
           
           <argLine>-Dosgi.requiredJavaVersion=1.5 -Xms40m -Xmx512m -DcreateDiffs=${createDiffs}</argLine>
           <failIfNoTests>false</failIfNoTests>
+          <testFailureIgnore>true</testFailureIgnore>
           
           <dependencies> 
           	<dependency>
