--- a/tests/org.eclipse.emf.emfstore.client.test.ui/.project
+++ b/tests/org.eclipse.emf.emfstore.client.test.ui/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>org.eclipse.emf.emfstore.client.test.ui.ui</name>
+	<name>org.eclipse.emf.emfstore.client.test.ui</name>
 	<comment></comment>
 	<projects>
 	</projects>
