--- a/bundles/org.eclipse.emf.emfstore.client/plugin.xml
+++ b/bundles/org.eclipse.emf.emfstore.client/plugin.xml
@@ -30,6 +30,7 @@
    <extension-point id="postCreationObserver" name="Post-Creation Observer" schema="schema/postCreationObserver.exsd"/>
    <extension-point id="shareObserver" name="Share Observer" schema="schema/shareObserver.exsd"/>
    <extension-point id="pagedUpdate" name="Paged Update Configuration" schema="schema/pagedUpdate.exsd"/>
+   <extension-point id="resourceSetProvider" name="ResourceSet Proider" schema="schema/resourceSetProvider.exsd"/>
   <extension point="org.eclipse.emf.ecore.generated_package">
     <package 
        uri = "http://eclipse.org/emf/emfstore/client/model" 
