implemented mongodb resource set provider

--- a/bundles/org.eclipse.emf.emfstore.client.mongodb/build.properties
+++ b/bundles/org.eclipse.emf.emfstore.client.mongodb/build.properties
@@ -1,4 +1,6 @@
-source.. = src/
 output.. = bin/
 bin.includes = META-INF/,\
-               .
+               .,\
+               OSGI-INF/config.xml,\
+               OSGI-INF/provider.xml
+source.. = src/
