--- a/bundles/org.eclipse.emf.emfstore.client.mongodb/build.properties
+++ b/bundles/org.eclipse.emf.emfstore.client.mongodb/build.properties
@@ -2,5 +2,6 @@ output.. = bin/
 bin.includes = META-INF/,\
                .,\
                OSGI-INF/config.xml,\
-               OSGI-INF/provider.xml
+               OSGI-INF/provider.xml,\
+               plugin.xml
 source.. = src/
