fixed mongo db plugin - bundle activation - reuse uri handlers - fixed converter

--- a/bundles/org.eclipse.emf.emfstore.client.mongodb/build.properties
+++ b/bundles/org.eclipse.emf.emfstore.client.mongodb/build.properties
@@ -1,7 +1,6 @@
 output.. = bin/
 bin.includes = META-INF/,\
                .,\
-               OSGI-INF/config.xml,\
-               OSGI-INF/provider.xml,\
-               plugin.xml
+               plugin.xml,\
+               OSGI-INF/
 source.. = src/
