fixed parent pom

--- a/releng/emfstore-parent/pom.xml
+++ b/releng/emfstore-parent/pom.xml
@@ -119,7 +119,7 @@
     <!-- EMFStore Additional Features -->
     <module>../../features/org.eclipse.emf.emfstore.client.transaction.feature</module>
     <module>../../bundles/org.eclipse.emf.emfstore.client.transaction</module>
-	<module>../../bundles/org.eclipse.emf.emfstore.client.ui.historybrowsercomparator.feature</module>
+	<module>../../features/org.eclipse.emf.emfstore.client.ui.historybrowsercomparator.feature</module>
 	<module>../../bundles/org.eclipse.emf.emfstore.client.ui.historybrowsercomparator</module>
 
     <!-- EMF Client Platform 
