--- a/bundles/org.eclipse.emf.emfstore.server/plugin.xml
+++ b/bundles/org.eclipse.emf.emfstore.server/plugin.xml
@@ -4,7 +4,8 @@
    <extension-point id="authenticationFactory" name="Authentication Factory" schema="schema/authenticationFactory.exsd"/>
    <extension-point id="locationProvider" name="Location Provider" schema="schema/locationProvider.exsd"/>
    <extension-point id="configurationResource" name="Server Configuration Resources" schema="schema/configurationResource.exsd"/>
-   <extension-point id="computeChecksum" name="Compute Checksum on Commit" schema="schema/computeChecksum.exsd"/>   
+   <extension-point id="computeChecksum" name="Compute Checksum on Commit" schema="schema/computeChecksum.exsd"/>
+   <extension-point id="resourceSetProvider" name="ResourceSet Provider" schema="schema/resourceSetProvider.exsd"/>   
    <extension
          id="application"
          name="EMFStore server"
