--- a/releng/emfstore-parent/pom.xml
+++ b/releng/emfstore-parent/pom.xml
@@ -17,7 +17,7 @@
 	<!-- Properties to enable jacoco code coverage analysis with sonar -->
 	<sonar.core.codeCoveragePlugin>jacoco</sonar.core.codeCoveragePlugin>
 	<sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
-	<sonar.jacoco.reportPath>../../tests/org.eclipse.emf.emfstore.client.test/target/jacoco.exec</sonar.jacoco.reportPath>
+	<sonar.jacoco.reportPath>../../tests/org.eclipse.emf.emfstore.client.test.alltests/target/jacoco.exec</sonar.jacoco.reportPath>
   </properties>
 
 <!-- 
