removed storage from properties

--- a/bundles/org.eclipse.emf.emfstore.server/src/org/eclipse/emf/emfstore/internal/server/es.properties
+++ b/bundles/org.eclipse.emf.emfstore.server/src/org/eclipse/emf/emfstore/internal/server/es.properties
@@ -189,20 +189,16 @@ emfstore.accesscontrol.authentication.policy=spfv
 # Options: LDAP configuration specifying "url", "base" and "searchdn"
 # Default: Not set
 #
-emfstore.accesscontrol.authentication.ldap.1.url=ldap://ldap1.in.tum.de:389
-emfstore.accesscontrol.authentication.ldap.1.base=ou=Personen,ou=IN,o=TUM,c=DE
-emfstore.accesscontrol.authentication.ldap.1.searchdn=uid
-
-emfstore.accesscontrol.authentication.ldap.2.url=ldap://ldap2.in.tum.de:389
-emfstore.accesscontrol.authentication.ldap.2.base=ou=Personen,ou=IN,o=TUM,c=DE
-emfstore.accesscontrol.authentication.ldap.2.searchdn=uid
+#emfstore.accesscontrol.authentication.ldap.1.url=ldap://ldap.example.com:389
+#emfstore.accesscontrol.authentication.ldap.1.base=ou=Users,ou=Unit,o=Organisation,c=US
+#emfstore.accesscontrol.authentication.ldap.1.searchdn=uid
 
 
 #
 # Plugin configuration.
 #
 
-# Defines whehter post load plugins shall be called or not.
+# Defines whether post load plugins shall be called or not.
 # Options: true or false
 # Default: true
 #
@@ -215,6 +211,3 @@ emfstore.startup.post.loadlistener = true
 # Used for development purposes.
 #
 emfstore.startup.loadlistener = false
-
-# EMF resource type for storing data. At the moment only one option is allowed: org.eclipse.emf.emfstore.internal.server.internal.storage.XMLStorage
-# emfstore.persistence.resourceStorage = org.eclipse.emf.emfstore.internal.server.internal.storage.XMLStorage
