added priority to resourcesetprovider extension point

--- a/bundles/org.eclipse.emf.emfstore.client/plugin.xml
+++ b/bundles/org.eclipse.emf.emfstore.client/plugin.xml
@@ -101,5 +101,12 @@
            observerAttributeName="shareObserver">
      </observer>
   </extension>
+  <extension
+        point="org.eclipse.emf.emfstore.client.resourceSetProvider">
+     <resourceSetProvider
+           class="org.eclipse.emf.emfstore.internal.client.provider.ESClientXMIResourceSetProvider"
+           priority="0">
+     </resourceSetProvider>
+  </extension>
 
 </plugin>
