--- a/bundles/org.eclipse.emf.emfstore.mongodb/plugin.xml
+++ b/bundles/org.eclipse.emf.emfstore.mongodb/plugin.xml
@@ -4,13 +4,15 @@
    <extension
          point="org.eclipse.emf.emfstore.client.resourceSetProvider">
       <resourceSetProvider
-            class="org.eclipse.emf.emfstore.mongodb.client.MongoDBClientResourceSetProvider">
+            class="org.eclipse.emf.emfstore.mongodb.client.MongoDBClientResourceSetProvider"
+            priority="10">
       </resourceSetProvider>
    </extension>
    <extension
          point="org.eclipse.emf.emfstore.server.resourceSetProvider">
       <resourceSetProvider
-            class="org.eclipse.emf.emfstore.mongodb.server.MongoDBServerResourceSetProvider">
+            class="org.eclipse.emf.emfstore.mongodb.server.MongoDBServerResourceSetProvider"
+            priority="10">
       </resourceSetProvider>
    </extension>
 
