included change certificate test in AllUIControllerTests, removed obsolete test class, removed dangling href, updated es.properties text, saving workspace when server has been added

--- a/bundles/org.eclipse.emf.emfstore.server/src/org/eclipse/emf/emfstore/internal/server/es.properties
+++ b/bundles/org.eclipse.emf.emfstore.server/src/org/eclipse/emf/emfstore/internal/server/es.properties
@@ -47,7 +47,8 @@ emfstore.acceptedversions=any
 # is saved into  a file. This options allows to specify how often a complete  project state should be saved. If the range is too 
 # small a lot of memory is used.
 # Options: Number bigger than 0
-# Default: "1" - every state is preserved. Shouldn't be used if server is deployed
+# If 1, every state is preserved. Shouldn't be used if server is deployed
+# Default: "50"
 #
 emfstore.persistence.version.projectstate.everyxversions = 50
 
