--- a/bundles/org.eclipse.emf.emfstore.server/build.properties
+++ b/bundles/org.eclipse.emf.emfstore.server/build.properties
@@ -5,7 +5,9 @@ bin.includes = .,\
                lib/org.apache.ws.commons.util_1.0.1.v20100518-1140.jar,\
                lib/xmlrpc-client-3.1.3.jar,\
                lib/xmlrpc-common-3.1.3.jar,\
-               lib/xmlrpc-server-3.1.3.jar
+               lib/xmlrpc-server-3.1.3.jar,\
+               src/org/eclipse/emf/emfstore/internal/server/es.properties,\
+               src/org/eclipse/emf/emfstore/internal/server/emfstoreServer.keystore
 source.. = src/
 output.. = bin/
 
