--- a/tests/org.eclipse.emf.emfstore.client.test/build.properties
+++ b/tests/org.eclipse.emf.emfstore.client.test/build.properties
@@ -8,7 +8,10 @@ bin.includes = .,\
                model/,\
                META-INF/,\
                plugin.xml,\
-               plugin.properties
+               plugin.properties,\
+               sampleFiles/emfstoreServer.keystore,\
+               sampleFiles/es.properties,\
+               sampleFiles/server.public-key
 jars.compile.order = .
 source.. = src/
 output.. = bin/
