Bug 412673 - Update Example plugins to new API https://bugs.eclipse.org/bugs/show_bug.cgi?id=412673

--- a/bundles/org.eclipse.emf.emfstore.example.helloworld/plugin.xml
+++ b/bundles/org.eclipse.emf.emfstore.example.helloworld/plugin.xml
@@ -9,7 +9,7 @@
             thread="main"
             visible="true">
          <run
-               class="org.eclipse.emf.emfstore.exampleclient.Application">
+               class="org.eclipse.emf.emfstore.example.helloworld.Application">
          </run>
       </application>
    </extension>
