--- a/bundles/org.eclipse.emf.emfstore.branding/about.ini
+++ b/bundles/org.eclipse.emf.emfstore.branding/about.ini
@@ -5,7 +5,7 @@
 # This file does not need to be translated.
 
 # Property "featureImage" contains path to feature image (32x32)
-featureImage=emfstore.png
+featureImage=modeling32.png
 
 # Property "appName" contains name of the application (translated)
 appName=%featureName
