Bug 412959 - Fix Branding for Features updated branding information

--- a/bundles/org.eclipse.emf.emfstore.client.ui.historybrowsercomparator/build.properties
+++ b/bundles/org.eclipse.emf.emfstore.client.ui.historybrowsercomparator/build.properties
@@ -2,4 +2,8 @@ source.. = src/
 output.. = bin/
 bin.includes = META-INF/,\
                .,\
-               plugin.xml
+               plugin.xml,\
+               about.mappings,\
+               about.ini,\
+               about.properties,\
+               modeling32.png
