--- a/bundles/org.eclipse.emf.emfstore.example.installer/build.properties
+++ b/bundles/org.eclipse.emf.emfstore.example.installer/build.properties
@@ -2,4 +2,8 @@ bin.includes = META-INF/,\
                .,\
                plugin.xml,\
                icons/,\
-               examples/
+               examples/,\
+               about.ini,\
+               about.mappings,\
+               about.properties,\
+               modeling32.png
