--- a/bundles/org.eclipse.emf.emfstore.common/build.properties
+++ b/bundles/org.eclipse.emf.emfstore.common/build.properties
@@ -4,4 +4,8 @@ bin.includes = META-INF/,\
                .,\
                plugin.xml,\
                lib/commons-io-2.0.1.jar,\
-               lib/org.apache.commons.lang_2.4.0.v201005080502.jar
+               lib/org.apache.commons.lang_2.4.0.v201005080502.jar,\
+               about.properties,\
+               about.mappings,\
+               about.ini,\
+               modeling32.png
