--- a/bundles/org.eclipse.emf.emfstore.modelmutator/build.properties
+++ b/bundles/org.eclipse.emf.emfstore.modelmutator/build.properties
@@ -1,4 +1,8 @@
 source.. = src/
 output.. = bin/
 bin.includes = META-INF/,\
-               .
+               .,\
+               modeling32.png,\
+               about.properties,\
+               about.mappings,\
+               about.ini
