--- a/bundles/org.eclipse.emf.emfstore.server/build.properties
+++ b/bundles/org.eclipse.emf.emfstore.server/build.properties
@@ -7,7 +7,11 @@ bin.includes = .,\
                lib/xmlrpc-common-3.1.3.jar,\
                lib/xmlrpc-server-3.1.3.jar,\
                src/org/eclipse/emf/emfstore/internal/server/es.properties,\
-               src/org/eclipse/emf/emfstore/internal/server/emfstoreServer.keystore
+               src/org/eclipse/emf/emfstore/internal/server/emfstoreServer.keystore,\
+               about.ini,\
+               about.mappings,\
+               about.properties,\
+               modeling32.png
 source.. = src/
 output.. = bin/
 
