--- a/bundles/org.eclipse.emf.emfstore.examplemodel/plugin.properties
+++ b/bundles/org.eclipse.emf.emfstore.examplemodel/plugin.properties
@@ -4,5 +4,5 @@
 #
 # $Id$
 
-pluginName = Bowling Model
-providerName = www.example.org
+pluginName = EMFStore Bowling Example Model
+providerName = Eclipse Modeling Project
