--- a/releng/emfstore-parent/pom.xml
+++ b/releng/emfstore-parent/pom.xml
@@ -296,7 +296,8 @@
         <configuration>
           <!-- Checkstyle violations will not fail the whole build -->
           <failOnViolation>false</failOnViolation>
-          <configLocation>${basedir}/../../EMFStoreDeveloper/coding/emfstoreStyle5.x.xml</configLocation>
+          <!-- <configLocation>${basedir}/../../EMFStoreDeveloper/coding/emfstoreStyle5.x.xml</configLocation>-->
+          <configLocation>http://download.eclipse.org/emfclient/config/esmCheckstyle.xml</configLocation>
           <propertyExpansion>samedir=${basedir}/../../EMFStoreDeveloper/coding</propertyExpansion>
         </configuration>
       </plugin>
