Bug 412070: Remove warnings https://bugs.eclipse.org/bugs/show_bug.cgi?id=412070
made package in client.transaction internal
added versions to manifest

--- a/bundles/org.eclipse.emf.emfstore.client.transaction/plugin.xml
+++ b/bundles/org.eclipse.emf.emfstore.client.transaction/plugin.xml
@@ -4,7 +4,7 @@
    <extension
          point="org.eclipse.emf.emfstore.client.editingDomainProvider">
       <provider
-            class="org.eclipse.emf.emfstore.client.transaction.TransactionalEditingDomainProvider">
+            class="org.eclipse.emf.emfstore.internal.client.transaction.TransactionalEditingDomainProvider">
       </provider>
    </extension>
      <extension
