Bug 414188 - SDK feature including sources and core features

--- a/releng/emfstore-parent/pom.xml
+++ b/releng/emfstore-parent/pom.xml
@@ -146,6 +146,7 @@
     <module>../../bundles/org.eclipse.emf.emfstore.examplemodel.edit</module>
 
     <!-- Update site and products -->
+	<module>../../features/org.eclipse.emf.emfstore.sdk.feature</module>
     <module>../org.eclipse.emf.emfstore.p2repository</module>
 	<module>../org.eclipse.emf.emfstore.products</module>
 
