--- a/bundles/org.eclipse.emf.emfstore.server/plugin.xml
+++ b/bundles/org.eclipse.emf.emfstore.server/plugin.xml
@@ -3,7 +3,8 @@
 <plugin>
    <extension-point id="locationProvider" name="Location Provider" schema="schema/locationProvider.exsd"/>
    <extension-point id="configurationResource" name="Server Configuration Resources" schema="schema/configurationResource.exsd"/>
-   <extension-point id="computeChecksum" name="Compute Checksum on Commit" schema="schema/computeChecksum.exsd"/>   
+   <extension-point id="computeChecksum" name="Compute Checksum on Commit" schema="schema/computeChecksum.exsd"/>
+   <extension-point id="serverCallObserver" name="Observer all calls to the server" schema="schema/serverCallObserver.exsd"/>   
    <extension
          id="application"
          name="EMFStore server"
