--- a/releng/emfstore-parent/pom.xml
+++ b/releng/emfstore-parent/pom.xml
@@ -11,7 +11,7 @@
   <properties>
     <tycho-version>0.18.0</tycho-version>
     <junit-version>4.8.2</junit-version>
-    <maven-checkstyle-version>2.9.1</maven-checkstyle-version>
+    <maven-checkstyle-version>2.10</maven-checkstyle-version>
     <jacoco-version>0.5.7.201204190339</jacoco-version>
 	<emfstore-version>1.0.1-SNAPSHOT</emfstore-version>
 	<!-- Properties to enable jacoco code coverage analysis with sonar -->
@@ -299,6 +299,8 @@
           <failOnViolation>false</failOnViolation>
           <!-- <configLocation>${basedir}/../../EMFStoreDeveloper/coding/emfstoreStyle5.x.xml</configLocation>-->
           <configLocation>http://download.eclipse.org/emfclient/config/esmCheckstyle.xml</configLocation>
+          <suppressionsFileExpression>checkstyle.suppressions.file</suppressionsFileExpression>
+					<suppressionsLocation>http://download.eclipse.org/emfclient/config/suppressions.xml</suppressionsLocation>
           <propertyExpansion>samedir=${basedir}/../../EMFStoreDeveloper/coding</propertyExpansion>
         </configuration>
       </plugin>
