everted from commit 7c3004453f2af466c25d208d15f7d529c7f94af9

--- a/bundles/org.eclipse.emf.emfstore.mongodb/plugin.xml
+++ b/bundles/org.eclipse.emf.emfstore.mongodb/plugin.xml
@@ -2,6 +2,13 @@
 <?eclipse version="3.4"?>
 <plugin>
    <extension
+         point="org.eclipse.emf.emfstore.client.resourceSetProvider">
+      <resourceSetProvider
+            class="org.eclipse.emf.emfstore.mongodb.client.MongoDBClientResourceSetProvider"
+            priority="10">
+      </resourceSetProvider>
+   </extension>
+   <extension
          point="org.eclipse.emf.emfstore.server.resourceSetProvider">
       <resourceSetProvider
             class="org.eclipse.emf.emfstore.mongodb.server.MongoDBServerResourceSetProvider"
