--- a/bundles/org.eclipse.emf.emfstore.examplemodel.edit/plugin.properties
+++ b/bundles/org.eclipse.emf.emfstore.examplemodel.edit/plugin.properties
@@ -91,3 +91,4 @@ _UI_Merchandise_name_feature = Name
 _UI_Merchandise_price_feature = Price
 _UI_Merchandise_serialNumber_feature = Serial Number
 _UI_Fan_fanMerchandise_feature = Fan Merchandise
+_UI_Referee_dateOfBirth_feature = Date Of Birth
