--- a/tests/org.eclipse.emf.emfstore.fuzzy.emf.test/pom.xml
+++ b/tests/org.eclipse.emf.emfstore.fuzzy.emf.test/pom.xml
@@ -29,7 +29,7 @@
           
           <argLine>-Dosgi.requiredJavaVersion=1.5 -Xms40m -Xmx512m -DrunFuzzyTests=${runFuzzyTests} -DfilterTests=${filterTests}</argLine>
           <failIfNoTests>false</failIfNoTests>
-          <testFailureIgnore>true<</testFailureIgnore>
+          <testFailureIgnore>true</testFailureIgnore>
           
           <dependencies> 
           	<dependency>
