--- a/tests/org.eclipse.emf.emfstore.client.api.test/pom.xml
+++ b/tests/org.eclipse.emf.emfstore.client.api.test/pom.xml
@@ -15,4 +15,352 @@
   <version>1.1.0-SNAPSHOT</version>
   <packaging>eclipse-test-plugin</packaging>
 
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.eclipse.tycho</groupId>
+                <artifactId>tycho-surefire-plugin</artifactId>
+                <version>${tycho-version}</version>
+
+                <goals>
+                    <goal>test</goal>
+                </goals>
+                <configuration>
+                    <testSuite>org.eclipse.emf.emfstore.client.api.test</testSuite>
+                    <testClass>org.eclipse.emf.emfstore.client.api.test.AllAPITests</testClass>
+                    <useUIHarness>true</useUIHarness>
+                    <useUIThread>false</useUIThread>
+                    <argLine>
+                        -Dosgi.requiredJavaVersion=1.5 -Xms40m -Xmx512m
+                    </argLine>
+                    <testFailureIgnore>true</testFailureIgnore>
+                    <!-- Plugins to be loaded to the osgi runtime -->
+                    <dependencies>
+                        <dependency>
+                            <type>eclipse-plugin</type>
+                            <artifactId>org.eclipse.emf.emfstore.client.model.edit</artifactId>
+                            <version>0.0.0</version>
+                        </dependency>
+                        <dependency>
+                            <type>eclipse-plugin</type>
+                            <artifactId>org.eclipse.emf.emfstore.client.test</artifactId>
+                            <version>0.0.0</version>
+                        </dependency>
+                        <dependency>
+                            <type>eclipse-plugin</type>
+                            <artifactId>org.eclipse.emf.emfstore.client</artifactId>
+                            <version>0.0.0</version>
+                        </dependency>
+                        <dependency>
+                            <type>eclipse-plugin</type>
+                            <artifactId>org.eclipse.emf.emfstore.common.model.edit</artifactId>
+                            <version>0.0.0</version>
+                        </dependency>
+                        <dependency>
+                            <type>eclipse-plugin</type>
+                            <artifactId>org.eclipse.emf.emfstore.common.model</artifactId>
+                            <version>0.0.0</version>
+                        </dependency>
+                        <dependency>
+                            <type>eclipse-plugin</type>
+                            <artifactId>org.eclipse.emf.emfstore.common</artifactId>
+                            <version>0.0.0</version>
+                        </dependency>
+                        <dependency>
+                            <type>eclipse-plugin</type>
+                            <artifactId>org.eclipse.emf.emfstore.modelmutator</artifactId>
+                            <version>0.0.0</version>
+                        </dependency>
+                        <dependency>
+                            <type>eclipse-plugin</type>
+                            <artifactId>org.eclipse.emf.emfstore.examplemodel.edit</artifactId>
+                            <version>0.0.0</version>
+                        </dependency>
+                        <dependency>
+                            <type>eclipse-plugin</type>
+                            <artifactId>org.eclipse.emf.emfstore.examplemodel</artifactId>
+                            <version>0.0.0</version>
+                        </dependency>
+                        <dependency>
+                            <type>eclipse-plugin</type>
+                            <artifactId>org.eclipse.emf.emfstore.migration</artifactId>
+                            <version>0.0.0</version>
+                        </dependency>
+                        <dependency>
+                            <type>eclipse-plugin</type>
+                            <artifactId>org.eclipse.emf.emfstore.server.model.edit</artifactId>
+                            <version>0.0.0</version>
+                        </dependency>
+                        <dependency>
+                            <type>eclipse-plugin</type>
+                            <artifactId>org.eclipse.emf.emfstore.server.model</artifactId>
+                            <version>0.0.0</version>
+                        </dependency>
+                        <dependency>
+                            <type>eclipse-plugin</type>
+                            <artifactId>org.eclipse.emf.emfstore.server</artifactId>
+                            <version>0.0.0</version>
+                        </dependency>
+                    </dependencies>
+
+                    <bundleStartLevel>
+                        <bundle>
+                            <id>org.eclipse.emf.emfstore.client.model.edit</id>
+                            <level>4</level>
+                            <autoStart>false</autoStart>
+                        </bundle>
+                        <bundle>
+                            <id>org.eclipse.emf.emfstore.client.test</id>
+                            <level>4</level>
+                            <autoStart>false</autoStart>
+                        </bundle>
+                        <bundle>
+                            <id>org.eclipse.emf.emfstore.client</id>
+                            <level>4</level>
+                            <autoStart>false</autoStart>
+                        </bundle>
+                        <bundle>
+                            <id>org.eclipse.emf.emfstore.common.model.edit</id>
+                            <level>4</level>
+                            <autoStart>false</autoStart>
+                        </bundle>
+                        <bundle>
+                            <id>org.eclipse.emf.emfstore.common.model</id>
+                            <level>4</level>
+                            <autoStart>false</autoStart>
+                        </bundle>
+                        <bundle>
+                            <id>org.eclipse.emf.emfstore.common</id>
+                            <level>4</level>
+                            <autoStart>false</autoStart>
+                        </bundle>
+                        <bundle>
+                            <id>org.eclipse.emf.emfstore.modelmutator</id>
+                            <level>4</level>
+                            <autoStart>false</autoStart>
+                        </bundle>
+                        <bundle>
+                            <id>org.eclipse.emf.emfstore.examplemodel.edit</id>
+                            <level>4</level>
+                            <autoStart>false</autoStart>
+                        </bundle>
+                        <bundle>
+                            <id>org.eclipse.emf.emfstore.examplemodel</id>
+                            <level>4</level>
+                            <autoStart>false</autoStart>
+                        </bundle>
+                        <bundle>
+                            <id>org.eclipse.emf.emfstore.migration</id>
+                            <level>4</level>
+                            <autoStart>false</autoStart>
+                        </bundle>
+                        <bundle>
+                            <id>org.eclipse.emf.emfstore.server.model.edit</id>
+                            <level>4</level>
+                            <autoStart>false</autoStart>
+                        </bundle>
+                        <bundle>
+                            <id>org.eclipse.emf.emfstore.server.model</id>
+                            <level>4</level>
+                            <autoStart>false</autoStart>
+                        </bundle>
+                        <bundle>
+                            <id>org.eclipse.emf.emfstore.server</id>
+                            <level>4</level>
+                            <autoStart>false</autoStart>
+                        </bundle>
+                    </bundleStartLevel>
+                </configuration>
+
+                <!-- More suites can be added here -->
+                <executions>
+                    <execution>
+                        <id>TransactionalEditingDomainTests</id>
+                        <phase>integration-test</phase>
+                        <goals>
+                            <goal>test</goal>
+                        </goals>
+                        <configuration>
+                            <reportsDirectory>${project.build.directory}/surefire-reports/transactional</reportsDirectory>
+                            <testSuite>org.eclipse.emf.emfstore.client.api.test</testSuite>
+                            <testClass>org.eclipse.emf.emfstore.client.api.test.AllAPITests</testClass>
+                            <useUIHarness>true</useUIHarness>
+                            <useUIThread>false</useUIThread>
+                            <argLine>
+                                -Dosgi.requiredJavaVersion=1.5 -Xms40m -Xmx512m
+                            </argLine>
+                            <testFailureIgnore>true</testFailureIgnore>
+
+                            <dependencies>
+                                <dependency>
+                                    <type>eclipse-plugin</type>
+                                    <artifactId>org.eclipse.emf.emfstore.client.model.edit</artifactId>
+                                    <version>0.0.0</version>
+                                </dependency>
+                                <dependency>
+                                    <type>eclipse-plugin</type>
+                                    <artifactId>org.eclipse.emf.emfstore.client.test</artifactId>
+                                    <version>0.0.0</version>
+                                </dependency>
+                                <dependency>
+                                    <type>eclipse-plugin</type>
+                                    <artifactId>org.eclipse.emf.emfstore.test.model</artifactId>
+                                    <version>0.0.0</version>
+                                </dependency>
+                                <dependency>
+                                    <type>eclipse-plugin</type>
+                                    <artifactId>org.eclipse.emf.emfstore.test.model.edit</artifactId>
+                                    <version>0.0.0</version>
+                                </dependency>
+                                <dependency>
+                                    <type>eclipse-plugin</type>
+                                    <artifactId>org.eclipse.emf.emfstore.client.transaction</artifactId>
+                                    <version>0.0.0</version>
+                                </dependency>
+                                <dependency>
+                                    <type>eclipse-plugin</type>
+                                    <artifactId>org.eclipse.emf.emfstore.client.changetracking.test</artifactId>
+                                    <version>0.0.0</version>
+                                </dependency>
+                                <dependency>
+                                    <type>eclipse-plugin</type>
+                                    <artifactId>org.eclipse.emf.emfstore.client</artifactId>
+                                    <version>0.0.0</version>
+                                </dependency>
+                                <dependency>
+                                    <type>eclipse-plugin</type>
+                                    <artifactId>org.eclipse.emf.emfstore.common.model.edit</artifactId>
+                                    <version>0.0.0</version>
+                                </dependency>
+                                <dependency>
+                                    <type>eclipse-plugin</type>
+                                    <artifactId>org.eclipse.emf.emfstore.common.model</artifactId>
+                                    <version>0.0.0</version>
+                                </dependency>
+                                <dependency>
+                                    <type>eclipse-plugin</type>
+                                    <artifactId>org.eclipse.emf.emfstore.common</artifactId>
+                                    <version>0.0.0</version>
+                                </dependency>
+                                <dependency>
+                                    <type>eclipse-plugin</type>
+                                    <artifactId>org.eclipse.emf.emfstore.modelmutator</artifactId>
+                                    <version>0.0.0</version>
+                                </dependency>
+                                <dependency>
+                                    <type>eclipse-plugin</type>
+                                    <artifactId>org.eclipse.emf.emfstore.examplemodel.edit</artifactId>
+                                    <version>0.0.0</version>
+                                </dependency>
+                                <dependency>
+                                    <type>eclipse-plugin</type>
+                                    <artifactId>org.eclipse.emf.emfstore.examplemodel</artifactId>
+                                    <version>0.0.0</version>
+                                </dependency>
+                                <dependency>
+                                    <type>eclipse-plugin</type>
+                                    <artifactId>org.eclipse.emf.emfstore.migration</artifactId>
+                                    <version>0.0.0</version>
+                                </dependency>
+                                <dependency>
+                                    <type>eclipse-plugin</type>
+                                    <artifactId>org.eclipse.emf.emfstore.server.model.edit</artifactId>
+                                    <version>0.0.0</version>
+                                </dependency>
+                                <dependency>
+                                    <type>eclipse-plugin</type>
+                                    <artifactId>org.eclipse.emf.emfstore.server.model</artifactId>
+                                    <version>0.0.0</version>
+                                </dependency>
+                                <dependency>
+                                    <type>eclipse-plugin</type>p
+                                    <artifactId>org.eclipse.emf.emfstore.server</artifactId>
+                                    <version>0.0.0</version>
+                                </dependency>
+                            </dependencies>
+
+                            <bundleStartLevel>
+                                <bundle>
+                                    <id>org.eclipse.emf.emfstore.client.model.edit</id>
+                                    <level>4</level>
+                                    <autoStart>false</autoStart>
+                                </bundle>
+                                <bundle>
+                                    <id>org.eclipse.emf.emfstore.client.test</id>
+                                    <level>4</level>
+                                    <autoStart>false</autoStart>
+                                </bundle>
+                                <bundle>
+                                    <id>org.eclipse.emf.emfstore.client.transaction</id>
+                                    <level>4</level>
+                                    <autoStart>false</autoStart>
+                                </bundle>
+                                <bundle>
+                                    <id>org.eclipse.emf.emfstore.client</id>
+                                    <level>4</level>
+                                    <autoStart>false</autoStart>
+                                </bundle>
+                                <bundle>
+                                    <id>org.eclipse.emf.emfstore.client.changetracking.test</id>
+                                    <level>4</level>
+                                    <autoStart>false</autoStart>
+                                </bundle>
+                                <bundle>
+                                    <id>org.eclipse.emf.emfstore.common.model.edit</id>
+                                    <level>4</level>
+                                    <autoStart>false</autoStart>
+                                </bundle>
+                                <bundle>
+                                    <id>org.eclipse.emf.emfstore.common.model</id>
+                                    <level>4</level>
+                                    <autoStart>false</autoStart>
+                                </bundle>
+                                <bundle>
+                                    <id>org.eclipse.emf.emfstore.common</id>
+                                    <level>4</level>
+                                    <autoStart>false</autoStart>
+                                </bundle>
+                                <bundle>
+                                    <id>org.eclipse.emf.emfstore.modelmutator</id>
+                                    <level>4</level>
+                                    <autoStart>false</autoStart>
+                                </bundle>
+                                <bundle>
+                                    <id>org.eclipse.emf.emfstore.examplemodel.edit</id>
+                                    <level>4</level>
+                                    <autoStart>false</autoStart>
+                                </bundle>
+                                <bundle>
+                                    <id>org.eclipse.emf.emfstore.examplemodel</id>
+                                    <level>4</level>
+                                    <autoStart>false</autoStart>
+                                </bundle>
+                                <bundle>
+                                    <id>org.eclipse.emf.emfstore.migration</id>
+                                    <level>4</level>
+                                    <autoStart>false</autoStart>
+                                </bundle>
+                                <bundle>
+                                    <id>org.eclipse.emf.emfstore.server.model.edit</id>
+                                    <level>4</level>
+                                    <autoStart>false</autoStart>
+                                </bundle>
+                                <bundle>
+                                    <id>org.eclipse.emf.emfstore.server.model</id>
+                                    <level>4</level>
+                                    <autoStart>false</autoStart>
+                                </bundle>
+                                <bundle>
+                                    <id>org.eclipse.emf.emfstore.server</id>
+                                    <level>4</level>
+                                    <autoStart>false</autoStart>
+                                </bundle>
+                            </bundleStartLevel>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
+
 </project>
